# JavaEnttForeignAPI

./: .gitignore  build.gradle  settings.gradle
src/main/cpp/java_entt/: CMakeLists.txt
src/main/cpp/java_entt/src/: java_entt_registry.cpp  java_entt_registry.h
src/main/java/: module-info.java
src/main/java/testing/: Testing.java
src/main/java/testing/entt/: Entt.java
src/main/java/testing/util/: Timer.java
